--- a/.env.prod
+++ b/.env.prod
@@ -1,2 +1,2 @@
-VITE_API_URL=https://api-stage.tableflight.com:1337/graphql
-VITE_REFRESH_TOKEN_URL=https://api-stage.tableflight.com:1337/refresh_token
+VITE_API_URL=https://api-stage.tableflight.com/graphql
+VITE_REFRESH_TOKEN_URL=https://api-stage.tableflight.com/refresh_token
